Refactor kode, memperbaiki bug logout

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,15 +3,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".fragments.SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/action_settings" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/settings_cardview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+                <RelativeLayout
+                    android:padding="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/cover_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp"
+                            android:src="@drawable/cover"
+                            android:scaleType="centerCrop"/>
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/settings_profile_image"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:src="@drawable/ic_profile"
+                            android:layout_centerHorizontal="true"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="140dp"/>
+
+                        <TextView
+                            android:id="@+id/settings_username"
+                            android:textSize="20sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/settings_profile_image"
+                            android:layout_centerHorizontal="true"/>
+
+                </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:background="@color/colorPrimaryDark"
+            android:layout_below="@id/settings_cardview"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="8dp"
+            android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginEnd="35dp"
+                    android:src="@drawable/fb"/>
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginEnd="35dp"
+                    android:src="@drawable/instagram"/>
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/website"/>
+
+        </LinearLayout>
 
 </RelativeLayout>
